examples/errors/binding-unbound.sem
system Syntax => Syntax

rule Unbound
<a> => <a>
----------
<a> => <c>

